# name: TestPreviewList.test_early_access_features
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 2
  LIMIT 21
  '
---
# name: TestPreviewList.test_early_access_features.1
  '
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics"
  FROM "posthog_featureflag"
  WHERE ("posthog_featureflag"."active"
         AND NOT "posthog_featureflag"."deleted"
         AND "posthog_featureflag"."team_id" = 2)
  '
---
# name: TestPreviewList.test_early_access_features.2
  '
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics"
  FROM "posthog_featureflag"
  WHERE ("posthog_featureflag"."active"
         AND NOT "posthog_featureflag"."deleted"
         AND "posthog_featureflag"."team_id" = 2)
  '
---
# name: TestPreviewList.test_early_access_features.3
  '
  SELECT "posthog_user"."id",
         "posthog_user"."password",
         "posthog_user"."last_login",
         "posthog_user"."first_name",
         "posthog_user"."last_name",
         "posthog_user"."is_staff",
         "posthog_user"."is_active",
         "posthog_user"."date_joined",
         "posthog_user"."uuid",
         "posthog_user"."current_organization_id",
         "posthog_user"."current_team_id",
         "posthog_user"."email",
         "posthog_user"."pending_email",
         "posthog_user"."temporary_token",
         "posthog_user"."distinct_id",
         "posthog_user"."is_email_verified",
         "posthog_user"."has_seen_product_intro_for",
         "posthog_user"."email_opt_in",
         "posthog_user"."partial_notification_settings",
         "posthog_user"."anonymize_data",
         "posthog_user"."toolbar_mode",
         "posthog_user"."events_column_config"
  FROM "posthog_user"
  WHERE "posthog_user"."id" = 2
  LIMIT 21
  '
---
# name: TestPreviewList.test_early_access_features.4
  '
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."extra_settings",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days"
  FROM "posthog_team"
  WHERE "posthog_team"."api_token" = 'token123'
  LIMIT 21 /*controller='posthog.api.early_access_feature.early_access_features',route='%5Eapi/early_access_features/%3F%28%3F%3A%5B%3F%23%5D.%2A%29%3F%24'*/
  '
---
# name: TestPreviewList.test_early_access_features.5
  '
  SELECT "posthog_earlyaccessfeature"."id",
         "posthog_earlyaccessfeature"."team_id",
         "posthog_earlyaccessfeature"."feature_flag_id",
         "posthog_earlyaccessfeature"."name",
         "posthog_earlyaccessfeature"."description",
         "posthog_earlyaccessfeature"."stage",
         "posthog_earlyaccessfeature"."documentation_url",
         "posthog_earlyaccessfeature"."created_at",
         "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics"
  FROM "posthog_earlyaccessfeature"
  LEFT OUTER JOIN "posthog_featureflag" ON ("posthog_earlyaccessfeature"."feature_flag_id" = "posthog_featureflag"."id")
  WHERE ("posthog_earlyaccessfeature"."stage" = 'beta'
         AND "posthog_earlyaccessfeature"."team_id" = 2) /*controller='posthog.api.early_access_feature.early_access_features',route='%5Eapi/early_access_features/%3F%28%3F%3A%5B%3F%23%5D.%2A%29%3F%24'*/
  '
---
